[package]
name = "zbx_sender"
version = "0.3.0"
authors = ["Alexander Andreev <andreevlex.as@gmail.com>"]
description = "Implementation of Zabbix Sender Client."
homepage = "https://github.com/ava57r/zbx-sender-rs"
repository = "https://github.com/ava57r/zbx-sender-rs"
documentation = "https://docs.rs/zbx_sender"
keywords = ["zabbix", "zabbix-sender", "zabbix-protocol"]
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
async_tokio = ["tokio"]

[dependencies]
serde  = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.5"
lazy_static = "1.4"
byteorder = "1.4"
thiserror = "1.0.31"
tokio = { version = "1.18", optional = true, features = ["net", "io-util"] }
