[package]
name = "zbx_sender"
version = "0.3.0"
authors = ["Alexander Andreev <andreevlex.as@gmail.com>"]
description = "Implementation of Zabbix Sender Client."
homepage = "https://github.com/ava57r/zbx-sender-rs"
repository = "https://github.com/ava57r/zbx-sender-rs"
documentation = "https://docs.rs/zbx_sender"
keywords = ["zabbix", "zabbix-sender", "zabbix-protocol"]
readme = "README.md"
license = "MIT"
edition = "2021"

[package.metadata."docs.rs"]
features = [
	"async_tokio",
	"tls_openssl",
	"tls_openssl_tokio",
	"clap",
]

[features]
async_tokio = ["tokio"]
_tls_common = ["derive_builder"]
tls_rustls = ["_tls_common", "rustls", "rustls-pemfile", "rustls-native-certs", "x509-certificate"]
tls_openssl = ["_tls_common", "openssl", "openssl-errors", "hex"]
tls_rustls_tokio = ["tokio-rustls"]
tls_openssl_tokio = ["tokio-openssl"]

[dependencies]
serde  = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.5"
lazy_static = "1.4"
byteorder = "1.4"
thiserror = "1.0.31"
tokio = { version = "1.18", optional = true, features = ["net", "io-util"] }
tracing = { version = "0.1", optional = true, features = ["log", "std"], default-features = false }
clap = { version = "3.1.17", optional = true, features = ["std", "derive"], default-features = false }
derive_builder = { version = "0.11.2", optional = true }
rustls = { version = "0.20.4", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0.0", optional = true }
rustls-native-certs = { version = "0.6.2", optional = true }
x509-certificate = { version = "0.13.0", optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
openssl = { version = "0.10.40", optional = true }
hex = { version = "0.4.3", optional = true }
openssl-errors = { version = "0.2.0", optional = true }
tokio-openssl = { version = "0.6.3", optional = true }

[dev-dependencies]
mock-io = { version = "0.3.2", features = ["sync", "async-tokio"] }
tokio = { version = "1.18.1", features = ["net", "io-util", "rt", "macros"] }
tokio-test = "0.4.2"

[[example]]
name = "tls_sender"
required-features = ["_tls_common", "clap"]

[[example]]
name = "tls_sender_async"
required-features = ["_tls_common", "clap", "async_tokio"]
